--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -28,6 +28,9 @@
         "aboutFiledrop":"FileDrop Hakkında",
         "publicGithubRepo":"Açık Github deposu",
         "advancedSettings":"Gelişmiş",
+        "crashReporting":"Hata Raporlama",
+        "crashReportingNotAvailable":"Hata raporlama masaüstü platformlarında mevcut değil",
+        "crashRepostingDescription":"FileDrop'u iyileştirmek için otomatik olarak hata raporlarını gönderir.",
         "version":"Sürüm",
         "buildNumber":"Derleme Numarası"
 }
